--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,8 +29,11 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Use gcloud CLI
-        run: gcloud info
-
       - name: Build Docker image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469806/notely-ar-repo/notely:latest .
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-469806/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-469806 --max-instances=4
+
+      - name: Use gcloud CLI
+        run: gcloud info
