--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,7 +38,7 @@ jobs:
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469806/notely-ar-repo/notely:latest .
 
       - name: Run Goose migration
-        run: goose libsql $DATABASE_URL up
+        run: goose sqlite3 $DATABASE_URL up
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-469806/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-469806 --max-instances=4
